bug 1046971 - Add ability to stop mirroring a tab

--- a/pl/mobile/android/chrome/browser.properties
+++ b/pl/mobile/android/chrome/browser.properties
@@ -170,6 +170,7 @@ selectionHelper.textCopied=Tekst został skopiowany do schowka
 # Casting
 casting.prompt=Przekaż do urządzenia
 casting.mirrorTab=Przekazana karta
+casting.mirrorTabStop=Zakończ przekazywanie
 
 # Context menu
 contextmenu.openInNewTab=Otwórz odnośnik w nowej karcie
