Bug 1043136 - Add permission prompt for device storage API

--- a/pl/mobile/android/chrome/browser.properties
+++ b/pl/mobile/android/chrome/browser.properties
@@ -108,9 +108,28 @@ desktopNotification.dontAskAgain=Nie pytaj ponownie dla tej witryny
 contacts.allow=Udziel
 contacts.dontAllow=Nie udzielaj
 contacts.ask=Udzielić programowi %S dostęp do kontaktów?
-# LOCALIZATION NOTE (contacts.dontAskAgain): This label appears next to a
-# checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Nie pytaj więcej dla tej witryny
+
+# Device Storage API
+deviceStorageMusic.allow=Udziel
+deviceStorageMusic.dontAllow=Nie udzielaj
+deviceStorageMusic.ask=Udzielić programowi %S dostęp do twojej muzyki?
+deviceStorageMusic.dontAskAgain=Nie pytaj więcej dla tej witryny
+
+deviceStoragePictures.allow=Udziel
+deviceStoragePictures.dontAllow=Nie udzielaj
+deviceStoragePictures.ask=Udzielić programowi %S dostęp do twoich zdjęć?
+deviceStoragePictures.dontAskAgain=Nie pytaj więcej dla tej witryny              
+
+deviceStorageSdcard.allow=Udziel
+deviceStorageSdcard.dontAllow=Nie udzielaj
+deviceStorageSdcard.ask=Udzielić programowi %S dostęp do zewnętrznego nośnika danych?
+deviceStorageSdcard.dontAskAgain=Nie pytaj więcej dla tej witryny
+
+deviceStorageVideos.allow=Udziel
+deviceStorageVideos.dontAllow=Nie udzielaj
+deviceStorageVideos.ask=Udzielić programowi %S dostęp do twoich filmów?
+deviceStorageVideos.dontAskAgain=Nie pytaj więcej dla tej witryny
 
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup): Semi-colon list of plural forms.
