Bug 1046941 - Disable downloads and extension installs in guest mode.

--- a/pl/mobile/android/chrome/browser.properties
+++ b/pl/mobile/android/chrome/browser.properties
@@ -19,6 +19,7 @@ alertDownloadsToast=Rozpoczęto pobieranie…
 alertDownloadsPause=Zatrzymaj
 alertDownloadsResume=Wznów
 alertDownloadsCancel=Anuluj
+downloads.disabledInGuest=Pobieranie zostało wyłączone dla sesji gościnnych
 
 alertFullScreenToast=Naciśnij WSTECZ, aby opuścić tryb pełnoekranowy
 
