Bug 1052288 - Move PageActions to a jsm module

--- a/pl/mobile/android/chrome/browser.properties
+++ b/pl/mobile/android/chrome/browser.properties
@@ -364,3 +364,4 @@ browser.menu.context.mailto = Poczta
 feedHandler.chooseFeed=Wybierz kanał
 feedHandler.subscribeWith=Subskrybuj poprzez
 
+nativeWindow.deprecated=API %S jest przestarzałe. Użyj: %S
