Bug 714070 - Tapping on the "Installation completed" toaster notification should open up the Add-ons manager.

--- a/pl/mobile/android/chrome/browser.properties
+++ b/pl/mobile/android/chrome/browser.properties
@@ -7,8 +7,10 @@ addonsConfirmInstall.install=Zainstaluj
 
 # Alerts
 alertAddonsDownloading=Pobieranie dodatku
-alertAddonsInstalledNoRestart=Instalacja zakończona
 alertAddonsFail=Instalacja zakończona niepowodzeniem
+alertAddonsInstalledNoRestart.message=Instalacja zakończona
+
+alertAddonsInstalledNoRestart.action2=DODATKI
 
 alertDownloadsStart2=Rozpoczęto pobieranie pliku
 alertDownloadsDone2=Zakończono pobieranie pliku
