Bug 1054912 - Change 'Cast to' term to 'Send to ' in-product

--- a/pl/mobile/android/chrome/browser.properties
+++ b/pl/mobile/android/chrome/browser.properties
@@ -190,7 +190,7 @@ browser.menu.showCharacterEncoding=false
 selectionHelper.textCopied=Tekst został skopiowany do schowka
 
 # Casting
-casting.prompt=Przekaż do urządzenia
+casting.sendToDevice=Przekaż do urządzenia
 casting.mirrorTab=Przekazana karta
 casting.mirrorTabStop=Zakończ przekazywanie
 
@@ -226,7 +226,7 @@ contextmenu.search=Wyszukaj w %S
 contextmenu.saveVideo=Zapisz film
 contextmenu.saveAudio=Zapisz plik audio
 contextmenu.addToContacts=Dodaj do kontaktów
-contextmenu.castToScreen=Przekaż do ekranu
+contextmenu.sendToDevice=Przekaż do urządzenia
 
 contextmenu.copy=Skopiuj
 contextmenu.cut=Wytnij
