[S] dom: Bug 1047428 - [AccessFu] Report read only state for editables

--- a/it/dom/chrome/accessibility/AccessFu.properties
+++ b/it/dom/chrome/accessibility/AccessFu.properties
@@ -119,6 +119,7 @@ statePressed = premuto
 stateExpanded = espanso
 stateCollapsed = compresso
 stateUnavailable = non disponibile
+stateReadonly = sola lettura
 stateRequired = obbligatorio
 stateTraversed = visitato
 stateHasPopup = ha dei popup
