Bug 1032348: Add adapter subsys to about:support. r=vukicevic

--- a/nl/toolkit/chrome/global/aboutSupport.properties
+++ b/nl/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound = ClearType-parameters niet gevonden
 adapterDescription = Adapterbeschrijving
 adapterVendorID = Vendor-ID
 adapterDeviceID = Device-ID
+adapterSubsysID = Subsys-ID
 adapterDrivers = Adapterstuurprogramma’s
 adapterRAM = Adapter-RAM
 driverVersion = Stuurprogrammaversie
@@ -71,6 +72,7 @@ driverDate = Datum stuurprogramma
 adapterDescription2 = Adapterbeschrijving (GPU #2) 
 adapterVendorID2 = Vendor-ID (GPU #2) 
 adapterDeviceID2 = Device-ID (GPU #2)
+adapterSubsysID2 = Subsys-ID (GPU #2)
 adapterDrivers2 = Adapterstuurprogramma’s (GPU #2)
 adapterRAM2 = Adapter-RAM (GPU #2)
 driverVersion2 = Stuurprogrammaversie (GPU #2)
