--- a/nl/security/manager/chrome/pipnss/nsserrors.properties
+++ b/nl/security/manager/chrome/pipnss/nsserrors.properties
@@ -299,3 +299,4 @@ SEC_ERROR_LOCKED_PASSWORD=Het wachtwoord is vergrendeld.
 SEC_ERROR_UNKNOWN_PKCS11_ERROR=Onbekende PKCS #11-fout.
 SEC_ERROR_BAD_CRL_DP_URL=Ongeldige of niet-ondersteunde URL in CRL-distributiepuntnaam.
 SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=Het certificaat is versleuteld via een ondertekeningsalgoritme dat is uitgeschakeld, omdat het onveilig is.
+MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=De server heeft een certificaat met een te kleine sleutelgrootte gepresenteerd om een beveiligde verbinding te maken.
