--- a/nl/security/manager/chrome/pipnss/nsserrors.properties
+++ b/nl/security/manager/chrome/pipnss/nsserrors.properties
@@ -299,4 +299,6 @@ SEC_ERROR_LOCKED_PASSWORD=Het wachtwoord is vergrendeld.
 SEC_ERROR_UNKNOWN_PKCS11_ERROR=Onbekende PKCS #11-fout.
 SEC_ERROR_BAD_CRL_DP_URL=Ongeldige of niet-ondersteunde URL in CRL-distributiepuntnaam.
 SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=Het certificaat is versleuteld via een ondertekeningsalgoritme dat is uitgeschakeld, omdat het onveilig is.
+MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=The server uses key pinning (HPKP) but no trusted certificate chain could be constructed that matches the pinset. Key pinning violations cannot be overridden.
+MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=The server uses a certificate with a basic constraints extension identifying it as a certificate authority. For a properly-issued certificate, this should not be the case.
 MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=De server heeft een certificaat met een te kleine sleutelgrootte gepresenteerd om een beveiligde verbinding te maken.
