--- a/nl/dom/chrome/accessibility/AccessFu.properties
+++ b/nl/dom/chrome/accessibility/AccessFu.properties
@@ -191,18 +191,84 @@ quicknav_Table       = Tabellen
 quicknav_Checkbox    = Selectievakjes
 
 # Shortened role names for braille
-linkAbbr           =       lnk
-pushbuttonAbbr     =       btn
-passwordtextAbbr   =       passwdtxt
-imagemapAbbr       =       imgmap
-figureAbbr         =       fig
-textareaAbbr       =       txtarea
-tableAbbr          =       tbl
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+menubarAbbr        =       menubalk
+scrollbarAbbr      =       scrollbalk
+gripAbbr           =       greep
+alertAbbr          =       waarschuwing	
+menupopupAbbr      =       menupop-up
+documentAbbr       =       document
+paneAbbr           =       venster
+dialogAbbr         =       dialoogvenster
+separatorAbbr      =       scheidingsteken
+toolbarAbbr        =       werkbalk
+statusbarAbbr      =       statusbalk
+tableAbbr          =       tabel
+columnheaderAbbr   =       kolomtitel
+rowheaderAbbr      =       rijkoptekst
+columnAbbr         =       kolom
+rowAbbr            =       rij
+cellAbbr           =       cel
+linkAbbr           =       koppeling
+listAbbr           =       lijst
+listitemAbbr       =       lijstitem
+outlineAbbr        =       omtrek
+outlineitemAbbr    =       contouronderdeel
+pagetabAbbr        =       tabblad
+propertypageAbbr   =       eigenschappenpagina
+graphicAbbr        =       grafisch
+pushbuttonAbbr     =       drukknop
+checkbuttonAbbr    =       selectieknop
+radiobuttonAbbr    =       keuzerondje
+comboboxAbbr       =       keuzelijst
+progressbarAbbr    =       voortgangsbalk
+sliderAbbr         =       schuifbalk
+spinbuttonAbbr     =       kringveldknop
+diagramAbbr        =       diagram
+animationAbbr      =       animatie
+equationAbbr       =       vergelijking
+buttonmenuAbbr     =       knoppenmenu
+whitespaceAbbr     =       witruimte
+pagetablistAbbr    =       tabbladlijst
+canvasAbbr         =       canvas
+checkmenuitemAbbr  =       selectiemenu-item
+labelAbbr          =       label
+passwordtextAbbr   =       wachtwoordtekst
+radiomenuitemAbbr  =       keuzerondjesmenu-item
+textcontainerAbbr  =       tekstcontainer
+togglebuttonAbbr   =       wisselknop
+treetableAbbr      =       structuurtabel
+headerAbbr         =       koptekst
+footerAbbr         =       voettekst
+paragraphAbbr      =       alinea
+entryAbbr          =       invoer
+captionAbbr        =       bijschrift
+headingAbbr        =       kop
+sectionAbbr        =       sectie
+formAbbr           =       formulier
+comboboxlistAbbr   =       keuzelijst
+comboboxoptionAbbr =       keuzelijstoptie
+imagemapAbbr       =       afbeelding met hyperlinks
+listboxoptionAbbr  =       optie
+listboxAbbr        =       keuzelijst
+flatequationAbbr   =       platte vergelijking
+gridcellAbbr       =       rastercel
+noteAbbr           =       noot
+figureAbbr         =       figuur
+definitionlistAbbr =       definitielijst
+termAbbr           =       term
+definitionAbbr     =       definitie
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1k;#1k
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1k;#1k
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1r;#1r
+tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = k%Sr%S
+
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
