Bug 1057518 - Ensure callingDoc and doc's principal are the same in XMLDocument::Load(). r=sicking

--- a/nl/dom/chrome/dom/dom.properties
+++ b/nl/dom/chrome/dom/dom.properties
@@ -208,3 +208,6 @@ KeyNameZoomWarning=KeyboardEvent.key-waarde “Zoom” is verouderd en zal worde
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
 KeyNameDeadKeysWarning=KeyboardEvent.key-waardes die starten met “Dead” zijn veroudert en worden samengevoegd tot “Dead". Zie https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key voor meer informatie
 ImportXULIntoContentWarning=XUL-nodes in een inhouddocumenten importeren wordt niet meer ondersteund. Deze functionaliteit zal binnenkort worden verwijderd.
+XMLDocumentLoadPrincipalMismatch=Gebruik van document.load is verboden bu documneten uit andere vensters. Alleen het venster in welke het document is gemaakt mag call .load aanroepen voor dat document. Gebruik in plaats daarvan bij voorkeur XMLHttpRequest.
+
+
