--- a/nl/dom/chrome/accessibility/AccessFu.properties
+++ b/nl/dom/chrome/accessibility/AccessFu.properties
@@ -95,11 +95,10 @@ listEnd        =       Laatste item
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       1 item;#1 items
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %1$S %2$S van %3$S
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
+objItemOfN      =       %1$S van %2$S
 
 # Landmark announcements
 banner         =       banner
@@ -109,17 +108,14 @@ main           =       hoofd
 navigation     =       navigatie
 search         =       zoeken
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %S met %S en %S
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = 1 kolom;#1 kolommen
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+tblColumnInfo = met 1 kolom;met #1 kolommen
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = 1 rij;#1 rijen
+tblRowInfo = en 1 rij;en #1 rijen
 
 # table or grid cell information
 columnInfo = Kolom %S
