Bug 1030470 - (part 1) moved the non-android localization part out of AccessFu to be handled in Gaia. r=eeejay

--- a/nl/dom/chrome/accessibility/AccessFu.properties
+++ b/nl/dom/chrome/accessibility/AccessFu.properties
@@ -253,6 +253,7 @@ figureAbbr         =       figuur
 definitionlistAbbr =       definitielijst
 termAbbr           =       term
 definitionAbbr     =       definitie
+textareaAbbr       =       tekstgebied
 
 # LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
 # Number of columns within the table.
