L10n for: Bug 687798 - Replace CAPAB support with CAP support and improve handling of replies, and add multi-prefix capability support.

--- a/pl/extensions/irc/chrome/chatzilla.properties
+++ b/pl/extensions/irc/chrome/chatzilla.properties
@@ -1312,6 +1312,14 @@ msg.supports.flagsOn=Ten serwer obsługuje %S"
 msg.supports.flagsOff=Ten serwer nie obsługuje %S" 
 msg.supports.miscOption="%S=%S" 
 msg.supports.miscOptions=Ustawienia/ograniczenia serwera: %S" 
+msg.supports.caps=Wspierane zdolności: %S"
+msg.supports.capsOn=Włączone zdolności: %S"
+
+
+msg.caps.list=Dostępne zdolności: %S"
+msg.caps.on=Zdolność %S włączona.
+msg.caps.off=Zdolność %S wyłączona.
+msg.caps.error=Zdolność %S jest nieprawidłowa.
 
 
 msg.conf.mode.on=Tryb konferencyjny został włączony dla tej karty. Wszystkie przyłączenia, odejścia, zamknięcia i zmiany identyfikatora będą ukryte.
@@ -1470,7 +1478,7 @@ pref.awayIdleMsg.help=Wiadomość nieobecności, której ChatZilla użyje, jeże
 pref.awayNick.label=Pseudonim (nieobecny) 
 pref.awayNick.help=Ten pseudonim zostanie automatycznie użyty, gdy użytkownik przejdzie w tryb 'nieobecny'. Gdy nie jest określony, pseudonim nie będzie zmieniany. 
 pref.bugKeyword.label=Słowa kluczowe dla błędów
-pref.bugKeyword.help=Istnieje możliwość ustalenia wielu słów kluczowych dla systemów zarządzania błedami za pomocą wyrażeń regularnych jak rozdzielenie ich za pomocą "|" np. błąd|bug|issue|case|ticket
+pref.bugKeyword.help=Istnieje możliwość ustalenia wielu słów kluczowych dla systemów zarządzania błędami za pomocą wyrażeń regularnych jak rozdzielenie ich za pomocą "|" np. błąd|bug|issue|case|ticket
 pref.bugURL.label=URL Bugzilli 
 pref.bugURL.help=Adres URL używany dla odnośnikow do błędów. "%s" jest zastępowane przez numer błędu lub alias. Tekst "bug " z następującym po nim numerem lub znakiem "#" i słowem o długości od 1 do 20 liter zostanie przekształcony w odnośnik zawierający ten adres URL.
 pref.bugURL.comment.label=URL Bugzilli dla komentarzy
