Bug 1009604 - Show runtime tabs in WebIDE

--- a/pl/browser/chrome/browser/devtools/webide.properties
+++ b/pl/browser/chrome/browser/devtools/webide.properties
@@ -22,6 +22,8 @@ importHostedApp_header=Adres URL manifestu
 notification_showTroubleShooting_label=Rozwiązywanie problemów
 notification_showTroubleShooting_accesskey=R
 
+project_tab_loading=Wczytywanie…
+
 error_cantInstallNotFullyConnected=Nie można zainstalować projektu - nie w pełni połączono.
 error_cantInstallValidationErrors=Nie można zainstalować projektu - błędy weryfikacji.
 error_listRunningApps=Nie można pobrać listy aplikacji z urządzenia.
