Bug 1047428 - [AccessFu] Report read only state for editables

--- a/pl/dom/chrome/accessibility/AccessFu.properties
+++ b/pl/dom/chrome/accessibility/AccessFu.properties
@@ -140,6 +140,7 @@ statePressed=naciśnięty
 stateExpanded    =    rozwinięty
 stateCollapsed   =    zwinięty
 stateUnavailable =    niedostępny
+stateReadonly=tylko do odczytu
 stateRequired    =    wymagany
 stateTraversed   =    odwiedzony
 stateHasPopup    =    z oknem wyskakującym
