--- a/it/browser/chrome/browser/downloads/downloads.properties
+++ b/it/browser/chrome/browser/downloads/downloads.properties
@@ -10,6 +10,16 @@ stateCanceled = Annullato
 stateBlockedParentalControls = Bloccato dalla Protezione per la famiglia
 stateBlockedPolicy = Bloccato dai criteri per le aree di protezione
 stateDirty = Bloccato: potrebbe contenere virus o spyware
+blockedMalware = Questo file contiene virus o malware.
+blockedPotentiallyUnwanted = Questo file potrebbe danneggiare il computer.
+blockedUncommon = Non è sicuro aprire questo file.
+unblockHeader = Sbloccare questo file?
+unblockTypeMalware = Questo file contiene virus o altro tipo di malware in grado di danneggiare il computer.
+unblockTypePotentiallyUnwanted = Questo file si presenta come un download utile ma potrebbe modificare i programmi installati e le impostazioni.
+unblockTypeUncommon = Questo file è stato scaricato da un sito web sconosciuto e potenzialmente pericoloso. Potrebbe essere rischioso aprirlo.
+unblockTip = È possibile cercare una sorgente alternativa per il download o riprovare a scaricare il file più tardi.
+unblockButtonContinue = Sblocca comunque
+unblockButtonCancel = Mantieni il blocco
 sizeWithUnits = %1$S %2$S
 sizeUnknown = Dimensione sconosciuta
 shortTimeLeftSeconds = %1$Ss
