[sy] browser: cycle 34 strings

--- a/sr/browser/chrome/browser/preferences/preferences.properties
+++ b/sr/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=Ово је списак колачића који се чувају 
 cookiesFiltered=Следећи колачићи задовољавају критеријум Ваше претраге:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Уклони примљене податке сајтова
 offlineAppRemovePrompt=Пошто уклоните ове податке, %S неће бити доступан ван мреже.  Да ли сигурно желите да уклоните сачуване податке о овом сајту?
 offlineAppRemoveConfirm=Уклони податке о сајту
