--- a/sr/browser/chrome/browser/quitDialog.properties
+++ b/sr/browser/chrome/browser/quitDialog.properties
@@ -10,3 +10,4 @@ saveTitle=&Сачувај и изађи
 neverAsk2=&Немој питати следећи пут
 message=Да ли желите да %S сачува језичке и прозоре за наредно покретање?
 messageNoWindows=Да ли желите да %S сачува језичке за наредно покретање?
+messagePrivate=Ви сте у режиму за приватно прегледање. Излажење из %S ће одбацити све Ваше отворене језичке и прозоре.
