--- a/sr/browser/chrome/browser/shellservice.properties
+++ b/sr/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,20 @@
 
 optionsLabel=%S &Подешавања
 safeModeLabel=%S &Безбедни режим
-setDefaultBrowserTitle=Подразумевани веб прегледач
-setDefaultBrowserMessage=%S није Ваш подразумевани веб прегледач. Да желите да буде постављен као подразумевани?
-setDefaultBrowserDontAsk=Увек провери при следећем покретању програма %S.
-alreadyDefaultBrowser=%S је већ постављен као подразумевани прегледач.
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = Добијте најбоље од %S тако што ћете га поставити као подразумевани прегледач
+setDefaultBrowserConfirm.label     = Користи %S као мој подразумевани прегледач
+setDefaultBrowserConfirm.accesskey = К
+setDefaultBrowserOptions.label     = Опције
+setDefaultBrowserOptions.accesskey = О
+setDefaultBrowserNotNow.label      = Не сада
+setDefaultBrowserNotNow.accesskey  = Н
+setDefaultBrowserNever.label       = Немој ме поново питати
+setDefaultBrowserNever.accesskey   = п
+
+
 desktopBackgroundLeafNameWin=Позадина радне површине.bmp
 DesktopBackgroundDownloading=Чување слике…
 DesktopBackgroundSet=Постави позадину радне површине
