[cy] update from Pootle (firefox)

--- a/cy/browser/chrome/browser/browser.properties
+++ b/cy/browser/chrome/browser/browser.properties
@@ -580,11 +580,11 @@ getUserMedia.sharingMenuScreen = %S (sgrin)
 getUserMedia.sharingMenuWindow = %S (ffenestr)
 getUserMedia.sharingMenuCameraMicrophone = %S (camera a meicroffon)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (camera, meicroffon a rhaglen)
-getUserMedia.sharingMenuCameraMicrophoneScreen = %S (camera, meicroffon a sgrin)\u0020
-getUserMedia.sharingMenuCameraMicrophoneWindow = %S (camera, meicroffon a ffenestr)\u0020
-getUserMedia.sharingMenuMicrophoneApplication = %S (meicroffon a rhaglen)\u0020
-getUserMedia.sharingMenuMicrophoneScreen = %S (meicroffon a sgrin)\u0020
-getUserMedia.sharingMenuMicrophoneWindow = %S (meicroffon a ffenestr)\u0020
+getUserMedia.sharingMenuCameraMicrophoneScreen = %S (camera, meicroffon a sgrin)
+getUserMedia.sharingMenuCameraMicrophoneWindow = %S (camera, meicroffon a ffenestr)
+getUserMedia.sharingMenuMicrophoneApplication = %S (meicroffon a rhaglen)
+getUserMedia.sharingMenuMicrophoneScreen = %S (meicroffon a sgrin)
+getUserMedia.sharingMenuMicrophoneWindow = %S (meicroffon a ffenestr)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
 getUserMedia.sharingMenuUnknownHost = Tarddiad anhysbys
