--- a/cy/browser/chrome/browser/devtools/gclicommands.properties
+++ b/cy/browser/chrome/browser/devtools/gclicommands.properties
@@ -180,7 +180,7 @@ highlightShowAllDesc=Dangos pob cyfatebiad
 # LOCALIZATION NOTE (highlightShowAllManual) A fuller description of the
 # 'showall' option parameter to the 'highlight' command, displayed when the
 # user asks for help on what it does.
-highlightShowAllManual=Os oes gormod o noda'n cydweddu â'r nodau, dim ond y 100 cyntaf fydd yn cael eu dangos i osgoi arafu'r dudalen yn ormodol. Defnyddiwch y dewis hwn i ddangos pob cydweddiad yn lle hynny.
+highlightShowAllManual=Os oes gormod o noda'n cydweddu â'r nodau, dim ond y 100 cyntaf fydd yn cael eu dangos i osgoi arafu'r dudalen yn ormodol. Defnyddiwch y dewis hwn i ddangos pob cydweddiad yn lle hynny
 
 # LOCALIZATION NOTE (highlightRegionDesc) A very short string to describe the
 # 'region' option parameter to the 'highlight' command, which is displayed in a
@@ -200,7 +200,7 @@ highlightFillDesc=Arddull llanw
 # LOCALIZATION NOTE (highlightFillManual) A fuller description of the 'fill'
 # option parameter to the 'highlight' command, displayed when the user asks for
 # help on what it does.
-highlightFillManual=Gwrthwneud arddull llanw'r ardal ragosodedig gyda lliw cyfaddas.
+highlightFillManual=Gwrthwneud arddull llanw'r ardal ragosodedig gyda lliw cyfaddas
 
 # LOCALIZATION NOTE (highlightKeepDesc) A very short string to describe the
 # 'keep' option parameter to the 'highlight' command, which is displayed in a
@@ -210,7 +210,7 @@ highlightKeepDesc=Cadw'r amlygwyr cyfredol
 # LOCALIZATION NOTE (highlightKeepManual) A fuller description of the 'keep'
 # option parameter to the 'highlight' command, displayed when the user asks for
 # help on what it does.
-highlightKeepManual=Mae'r amlygwyr cyfredol wedi eu rhagosod i guddio wrth redeg y gorchymyn, oni bai fod y dewis yma wedi ei wneud.
+highlightKeepManual=Mae'r amlygwyr cyfredol wedi eu rhagosod i guddio wrth redeg y gorchymyn, oni bai fod y dewis yma wedi ei wneud
 
 # LOCALIZATION NOTE (highlightOutputConfirm) A confirmation message for the
 # 'highlight' command, displayed to the user once the command has been entered,
