--- a/cy/browser/chrome/browser/devtools/profiler.properties
+++ b/cy/browser/chrome/browser/devtools/profiler.properties
@@ -41,7 +41,7 @@ recordingsList.itemLabel=Recordio #%S
 # LOCALIZATION NOTE (recordingsList.recordingLabel):
 # This string is displayed in the recordings list of the Profiler,
 # for an item that has not finished recording.
-recordingsList.recordingLabel=Cynnydd...
+recordingsList.recordingLabel=Cynnydd…
 
 # LOCALIZATION NOTE (recordingsList.durationLabel):
 # This string is displayed in the recordings list of the Profiler,
@@ -93,7 +93,7 @@ table.zoom.tooltiptext=Archwilio'r ffrâm mewn tab newydd
 
 # LOCALIZATION NOTE (recordingsList.saveDialogTitle):
 # This string is displayed as a title for saving a recording to disk.
-recordingsList.saveDialogTitle=Cadw proffil
+recordingsList.saveDialogTitle=Cadw proffil…
 
 # LOCALIZATION NOTE (recordingsList.saveDialogJSONFilter):
 # This string is displayed as a filter for saving a recording to disk.
