--- a/cy/browser/chrome/browser/devtools/storage.properties
+++ b/cy/browser/chrome/browser/devtools/storage.properties
@@ -109,3 +109,4 @@ storage.data.label=Data
 
 # LOCALIZATION NOTE (storage.parsedValue.label):
 # This is the heading displayed over the item parsed value in the sidebar
+storage.parsedValue.label=Gwerth Didoli
