--- a/cy/browser/chrome/browser/loop/loop.properties
+++ b/cy/browser/chrome/browser/loop/loop.properties
@@ -36,8 +36,8 @@ display_name_available_status=Ar Gael
 ## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
 ## These may be displayed at the top of the panel here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
-unable_retrieve_url=Ymddiheuriadau, nid oedd modd i ni adalw url galwad
-session_expired_error_description=Daeth y sesiwn i ben. Ni fydd  yr  un URL rydych wedi eu creu a'u rhannu yn gweithio, bellach.
+unable_retrieve_url=Ymddiheuriadau, nid oedd modd i ni adalw url galwad.
+session_expired_error_description=Daeth y sesiwn i ben. Ni fydd yr un URL rydych wedi eu creu a'u rhannu yn gweithio, bellach.
 could_not_authenticate=Methu Dilysu
 password_changed_question=A ydych wedi newid eich cyfrinair?
 try_again_later=Ceisiwch eto'n hwyrach
@@ -55,7 +55,7 @@ retry_button=Ceisio eto
 share_email_subject3=Rydych wedi eich gwahodd i sgwrs
 ## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body3=I dderbyn y gwahoddiad hwn, copïwch neu gliciwch y ddolen i gychwyn eich sgwrs:\n\n{{callUrl}}
+share_email_body3=I dderbyn y gwahoddiad, copïwch neu gliciwch y ddolen i gychwyn eich sgwrs: \n\n{{callUrl}}
 share_button=E-bost
 copy_url_button=Copïo
 copied_url_button=Wedi Copïo!
@@ -78,10 +78,13 @@ contacts_search_placesholder=Chwilio…
 ## new contact sub-panel.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## for where this appears on the UI
+new_contact_button=Cysylltiad Newydd
 ## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
 ## These are the placeholders for the fields for entering a new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## and click the 'New Contact' button to see the fields.
+new_contact_name_placeholder=Enw
+new_contact_email_placeholder=E-bost
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -112,7 +115,7 @@ import_failed_description_simple=Ymddiheuriadau, methodd mewnforio cysylltiadau
 ## {{..}} because this will be replaced by the label from import_failed_support_link_label.
 ## This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
-import_failed_description=Ymddiheuriadau, methodd mewnforio cysylltiadau, gw. {{import_failed_support_link_label}} am gymorth
+import_failed_description=Ymddiheuriadau, methodd mewnforio cysylltiadau gw. {{import_failed_support_link_label}} am gymorth
 import_failed_support_link_label=gwefan cefnogaeth
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
@@ -139,7 +142,7 @@ unblock_contact_menu_button=Dad-rwystro Cysylltiad
 ## LOCALIZATION NOTE(edit_contact_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-edit_contact_menu_button=Golygu Cysylltiad...
+edit_contact_menu_button=Golygu Cysylltiad…
 ## LOCALIZATION NOTE(edit_contact_tile): This is the subtitle of the edit contact
 ## panel. It is displayed when Edit Contact is selected.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -158,13 +161,16 @@ edit_contact_done_button=Gorffen
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+audio_call_menu_button=Trosi Sain
 
 ## LOCALIZATION NOTE(video_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+video_call_menu_button=Sgwrs Video
 
 # Conversation Window Strings
 
+initiate_call_button_label2=Barod i gychwyn sgwrs?
 incoming_call_title2=Cais am Sgwrs
 incoming_call_accept_button=Derbyn
 incoming_call_accept_audio_only_tooltip=Derbyn gyda llais
@@ -189,6 +195,8 @@ call_with_contact_title=Sgwrs gyda {{contactName}}
 outgoing_call_title=Cychwyn sgwrsio?
 initiate_audio_video_call_button2=Cychwyn
 initiate_audio_video_call_tooltip2=Cychwyn sgwrs fideo
+initiate_audio_call_button2=Sgwrs llais
+initiate_call_cancel_button=Diddymu
 
 ## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
 ## whilst the client is contacting the client at the other end of the connection
@@ -197,6 +205,7 @@ call_progress_connecting_description=Cysylltu…
 ## LOCALIZATION NOTE (call_progress_ringing_description): This is displayed
 ## when the other client is actually ringing.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_ringing_description=Canu…
 
 peer_ended_conversation2=Mae'r person roeddech yn eu galw wedi dod â'r sgwrs i ben.
 conversation_has_ended=Mae eich sgwrs wedi dod i ben.
