--- a/cy/browser/chrome/browser/newTab.properties
+++ b/cy/browser/chrome/browser/newTab.properties
@@ -12,7 +12,7 @@ newtab.sponsored.button=NODDEDIG
 # LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
 # the (X) block icon. %2$S will be replaced by an active link using string
 # newtab.learn.link as text.
-newtab.sponsored.explain=Mae'r deilsen yn cael ei dangos i chi ar ran un o bartneriaid Mozilla. Mae modd i chi ei thynnu ar unrhyw bryd drwy glicio ar fotwm. %2$S
+newtab.sponsored.explain=Mae'r deilsen yn cael ei dangos i chi ar ran un o bartneriaid Mozilla. Mae modd i chi ei thynnu ar unrhyw bryd drwy glicio ar fotwm %1$S. %2$S
 # LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
 # the gear icon used to customize the new tab window. %2$S will be replaced by
 # an active link using string newtab.learn.link as text.
