--- a/cy/security/manager/chrome/pipnss/nsserrors.properties
+++ b/cy/security/manager/chrome/pipnss/nsserrors.properties
@@ -299,3 +299,6 @@ SEC_ERROR_LOCKED_PASSWORD=Mae'r cyfrinair wedi ei gloi.
 SEC_ERROR_UNKNOWN_PKCS11_ERROR=Gwall PKCS #11 anhysbys.
 SEC_ERROR_BAD_CRL_DP_URL=URL annilys neu heb ei gynnal yn enw pwynt dosbarthiad CRL.
 SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=Cafodd y dystysgrif ei llofnodi gan ddefnyddio algorithm llofnod sydd wedi ei analluogi am nad yw'n ddiogel.
+MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=Mae'r gweinydd yn defnyddio pinio allwedd (HPKP) ond nid oedd modd cynhyrchu cadwyn tystysgrif ymddiriedig sy'n cyd-fynd a'r set pinnau. Nid oes mod gwrthwneud torri pinio allweddi.
+MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Mae'r gweinydd yn defnyddio tystysgrif gydag estyniad cyfyngiadau sylfaenol sy'n ei ddynodi fel yr awdurdod tystysgrifo. Ar gyfer tystysgrifau sydd wedi eu rhyddhau'n briodol, ni ddylai hyn fod yn wir.
+MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Cyflwynodd y gweinydd dystysgrif sydd ag allwedd sy'n rhy fach i greu cysylltiad diogel.
