--- a/cy/browser/chrome/browser/devtools/webide.properties
+++ b/cy/browser/chrome/browser/devtools/webide.properties
@@ -5,7 +5,7 @@
 title_noApp=Firefox WebIDE
 title_app=Firefox WebIDE: %S
 
-runtimeButton_label=Dewis yr Amser Rhedeg
+runtimeButton_label=Dewis Amser Rhedeg
 projectButton_label=Agor Ap
 
 mainProcess_label=Prif Broses
@@ -39,13 +39,16 @@ error_cantConnectToApp=Methu cysylltu â'r ap: %1$S
 error_cantFetchAddonsJSON=Methu estyn y rhestr ychwanegion: %S
 
 addons_stable=sefydlog
+addons_unstable=ansefydlog
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
 # a given simulator version in the "Manage Simulators" pane.  %1$S: Firefox OS
 # version in the simulator, ex. 1.3.  %2$S: Simulator stability label, ex.
 # "stable" or "unstable".
+addons_simulator_label=Efelychydd Firefox OS %1$S (%2$S)
 addons_install_button=gosod
 addons_uninstall_button=dadosod
-addons_adb_warning=Ni fydd y dyfeisiau USB yn cael eu canfod heb yr ychwanegyn.
+addons_adb_label=Ychwanegyn Cynorthwyydd ADB
+addons_adb_warning=Ni fydd y dyfeisiau USB yn cael eu canfod heb yr ychwanegyn
 addons_status_unknown=?
 addons_status_installed=Gosodwyd
 addons_status_uninstalled=Heb ei osod
@@ -56,8 +59,11 @@ addons_status_installing=gosod
 runtimedetails_checkno=na
 runtimedetails_checkyes=iawn
 runtimedetails_checkunkown=anhysbys
+runtimedetails_notUSBDevice=Nid yw'n ddyfais USB
 
 # Validation status
+status_tooltip=Statws dilysu: %1$S
+status_valid=DILYS
 status_warning=RHYBUDDION
 status_error=GWALLAU
 status_unknown=ANHYSBYS
