--- a/cy/dom/chrome/dom/dom.properties
+++ b/cy/dom/chrome/dom/dom.properties
@@ -180,7 +180,7 @@ KeyNameNonconvertWarning=Mae gwerth KeyboardEvent.key "Nonconvert" yn anarferedi
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "HalfWidth" and "Hankaku".
 KeyNameHalfWidthWarning=Mae gwerth KeyboardEvent.key "HalfWidth" yn anarferedig a bydd yn cael ei ailenwi "Hankaku". Am gymorth pellach ewch i https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "RomanCharacters", "Romaji" and "Eisu".
-KeyNameRomanCharactersWarning=Mae gwerth KeyboardEvent.key "RomanCharacters" yn anarferedig a bydd yn cael ei ailenwi "Romaji". Am gymorth pellach ewch i https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameRomanCharactersWarning=Mae gwerth KeyboardEvent.key "RomanCharacters" yn anarferedig a bydd yn cael ei ailenwi "Romaji" neu ei ailfapio i "Eisu". Am gymorth pellach ewch i https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FullWith" and "Zenkaku".
 KeyNameFullWidthWarning=Mae gwerth KeyboardEvent.key "FullWidth" yn anarferedig a bydd yn cael ei ailenwi "Zenkaku". Am gymorth pellach ewch i https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "SelectMedia" and "MediaSelect".
@@ -200,7 +200,7 @@ KeyNameBlueWarning=Mae gwerth KeyboardEvent.key "Blue" yn anarferedig a bydd yn 
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Live".
 KeyNameLiveWarning=Mae gwerth KeyboardEvent.key "Live" yn anarferedig a bydd yn cael ei dynnu. Am gymorth pellach ewch i https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Apps".
-KeyNameAppsWarning=Mae gwerth KeyboardEvent.key "Apps" yn anarferedig a bydd yn cael ei dynnu. Am gymorth pellach ewch i https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key\u0020
+KeyNameAppsWarning=Mae gwerth KeyboardEvent.key "Apps" yn anarferedig a bydd yn cael ei dynnu. Am gymorth pellach ewch i https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FastFwd" and "MediaFastForward".
 KeyNameFastFwdWarning=Mae gwerth KeyboardEvent.key "FastFwd" yn anarferedig a bydd yn cael ei ailenwi "MediaFastForward". Am gymorth pellach ewch i https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Zoom" and "ZoomToggle".
