[ms] update from Pootle (firefox)

--- a/ms/dom/chrome/accessibility/AccessFu.properties
+++ b/ms/dom/chrome/accessibility/AccessFu.properties
@@ -28,7 +28,14 @@ link           =       pautan
 list           =       senarai
 listitem       =       senarai item
 outline        =       garisan luar
+outlineitem    =       item garis panduan
+pagetab        =       tab
+propertypage   =       ciri laman
+graphic        =       grafik
 pushbutton     =       butang
+checkbutton    =       butang semak
+radiobutton    =       butang radio
+combobox       =       kekotak kombo
 passwordtext   =       teks kata laluan
 imagemap       =       peta imej
 figure         =       rajah
