[cy] update from Pootle (mobile)

--- a/cy/mobile/android/chrome/browser.properties
+++ b/cy/mobile/android/chrome/browser.properties
@@ -7,8 +7,12 @@ addonsConfirmInstall.install=Gosod
 
 # Alerts
 alertAddonsDownloading=Llwytho ychwanegyn i lawr
-alertAddonsInstalledNoRestart=Gosod wedi ei gwblhau
 alertAddonsFail=Methodd y gosod
+alertAddonsInstalledNoRestart.message=Gosod wedi ei gwblhau
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=YCHWANEGION
 
 alertDownloadsStart2=Llwytho i lawr wedi cychwyn
 alertDownloadsDone2=Llwythi cyflawn
@@ -19,6 +23,9 @@ alertDownloadsToast=Llwytho i lawr wedi cychwyn…
 alertDownloadsPause=Oedi
 alertDownloadsResume=Ailgychwyn
 alertDownloadsCancel=Diddymu
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
+downloads.disabledInGuest=Mae llwytho i lawr wedi ei atal yn ystod sesiynau gwestai
 
 alertFullScreenToast=Pwyso NÔL i adael y modd sgrin llawn
 
@@ -116,6 +123,35 @@ contacts.ask=Caniatáu i %S gael mynediad i'ch cysylltiadau?
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Peidio gofyn eto am y wefan hon
 
+# Device Storage API
+deviceStorageMusic.allow=Caniatáu
+deviceStorageMusic.dontAllow=Peidio caniatáu
+deviceStorageMusic.ask=Caniatáu %S fynediad i'ch cerddoriaeth?
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=Peidio gofyn eto am y wefan
+
+deviceStoragePictures.allow=Caniatáu
+deviceStoragePictures.dontAllow=Peidio caniatáu
+deviceStoragePictures.ask=Caniatáu %S fynediad i'ch delweddau?
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=Peidio gofyn eto am y wefan
+
+deviceStorageSdcard.allow=Caniatáu
+deviceStorageSdcard.dontAllow=Peidio caniatáu
+deviceStorageSdcard.ask=Caniatáu i %S gael mynediad i storio allanol?
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=Peidio gofyn eto am y wefan
+
+deviceStorageVideos.allow=Caniatáu
+deviceStorageVideos.dontAllow=Peidio caniatáu
+deviceStorageVideos.ask=Caniatáu i %S gael mynediad i'ch fideos?
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=Peidio gofyn eto am y wefan
+
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -175,7 +211,11 @@ browser.menu.showCharacterEncoding=false
 selectionHelper.textCopied=Testun wedi ei gopïo i'r clipfwrdd
 
 # Casting
-casting.prompt=Lledu i Ddyfais
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
+casting.sendToDevice=Anfon i Ddyfais
+casting.mirrorTab=Tab Drych
+casting.mirrorTabStop=Atal Drych
 
 # Context menu
 contextmenu.openInNewTab=Agor Dolen mewn Tab Newydd
@@ -209,7 +249,9 @@ contextmenu.unmute=Dadfudo
 contextmenu.saveVideo=Cadw Fideo
 contextmenu.saveAudio=Cadw Sain
 contextmenu.addToContacts=Ychwanegu i'r Cysylltiadau
-contextmenu.castToScreen=Lledu i Sgrin
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=Anfon i Ddyfais
 
 contextmenu.copy=Torri
 contextmenu.cut=Torri
@@ -341,3 +383,9 @@ browser.menu.context.mailto = E-bost
 # "Subscribe to page" prompts created in FeedHandler.js
 feedHandler.chooseFeed=Dewis llif
 feedHandler.subscribeWith=Tanysgrifio gyda
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
+nativeWindow.deprecated=Mae %S yn anghymarus. Defnyddiwch %S
