--- a/cy/mobile/android/chrome/webapp.properties
+++ b/cy/mobile/android/chrome/webapp.properties
@@ -55,3 +55,5 @@ retrievalFailedTitle=Methodd #1 diweddariad;Methodd #1 diweddariad
 # %1$S is a comma-separated list of apps for which retrieval failed.
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Methwyd estyn diweddariad ar gyfer %1$S;Methwyd estyn diweddariadau ar gyfer %1$S
+
+webappsDisabledInGuest=Mae gosod apiau wedi ei atal yn ystod sesiwn gwestai
