--- a/sv-SE/mobile/android/chrome/browser.properties
+++ b/sv-SE/mobile/android/chrome/browser.properties
@@ -7,8 +7,12 @@ addonsConfirmInstall.install=Installera
 
 # Alerts
 alertAddonsDownloading=Hämtar tillägg
-alertAddonsInstalledNoRestart=Installationen är klar
 alertAddonsFail=Installationen misslyckades
+alertAddonsInstalledNoRestart.message=Installationen är klar
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=TILLÄGG
 
 alertDownloadsStart2=Hämtning startad
 alertDownloadsDone2=Hämtning slutförd
@@ -19,6 +23,9 @@ alertDownloadsToast=Hämtning startad…
 alertDownloadsPause=Pausa
 alertDownloadsResume=Återuppta
 alertDownloadsCancel=Avbryt
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
+downloads.disabledInGuest=Nedladdningarna är inaktiverat i gästsessioner
 
 alertFullScreenToast=Tryck BAKÅT för att lämna helskärmsläget
 
@@ -116,6 +123,35 @@ contacts.ask=Ge %S tillgång till dina kontakter?
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Fråga inte igen för den här platsen
 
+# Device Storage API
+deviceStorageMusic.allow=Tillåt
+deviceStorageMusic.dontAllow=Tillåt inte
+deviceStorageMusic.ask=Tillåter du %S att komma åt din musik?
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=Fråga inte igen för den här platsen
+
+deviceStoragePictures.allow=Tillåt
+deviceStoragePictures.dontAllow=Tillåt inte
+deviceStoragePictures.ask=Tillåter du %S att komma åt dina bilder?
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=Fråga inte igen för den här platsen
+
+deviceStorageSdcard.allow=Tillåt
+deviceStorageSdcard.dontAllow=Tillåt inte
+deviceStorageSdcard.ask=Tillåter du %S att ha tillgång till extern lagring?
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=Fråga inte igen för den här platsen
+
+deviceStorageVideos.allow=Tillåt
+deviceStorageVideos.dontAllow=Tillåt inte
+deviceStorageVideos.ask=Tillåter du %S att komma åt dina videos?
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=Fråga inte igen för den här platsen
+
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -175,7 +211,11 @@ browser.menu.showCharacterEncoding=false
 selectionHelper.textCopied=Kopierad text i urklipp
 
 # Casting
-casting.prompt=Skickar till enhet
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
+casting.sendToDevice=Skicka till enhet
+casting.mirrorTab=Spegla flik
+casting.mirrorTabStop=Sluta Spegla
 
 # Context menu
 contextmenu.openInNewTab=Öppna länk i ny flik
@@ -209,7 +249,9 @@ contextmenu.unmute=Ljud på
 contextmenu.saveVideo=Spara video
 contextmenu.saveAudio=Spara ljud
 contextmenu.addToContacts=Lägg till kontakt
-contextmenu.castToScreen=Skicka till skärm
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=Skicka till enhet
 
 contextmenu.copy=Kopiera
 contextmenu.cut=Klipp ut
@@ -341,3 +383,9 @@ browser.menu.context.mailto = E-post
 # "Subscribe to page" prompts created in FeedHandler.js
 feedHandler.chooseFeed=Välj feed
 feedHandler.subscribeWith=Prenumerera med
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
+nativeWindow.deprecated=%S är föråldrad. Använd %S istället
