--- a/sv-SE/mobile/android/chrome/webapp.properties
+++ b/sv-SE/mobile/android/chrome/webapp.properties
@@ -55,3 +55,5 @@ retrievalFailedTitle=#1 updatering misslyckades;#1 uppdateringar misslyckades
 # %1$S is a comma-separated list of apps for which retrieval failed.
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Misslyckades att ladda hem uppdateringar för %1$S; Misslyckades att ladda ner uppdateringar för %1$S
+
+webappsDisabledInGuest=Installering av appar är inaktiverad i gästsessioner
